--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "node server.js",
+    "dev:default": "next",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "cross-env NODE_ENV=production node server.js",
+    "start:default": "next start"
   },
   "dependencies": {
     "cross-env": "^7.0.2",
