--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "node server.js",
-    "dev:default": "next",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.js",
-    "start:default": "next start"
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
     "cross-env": "^7.0.2",
